--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "lodash": "^4.17.21",
     "mysql2": "^3.11.2",
     "nodemailer": "^6.9.15",
     "passport": "^0.7.0",
