update file uploading

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,28 @@
 ALLOWED_ORIGINS=
-
 PORT=
 HOST=
 SWAGGER=
 
+CLIENT_URL=
+LINK_EXPIRATION_TIME_MINUTES=
+LINK_DELETION_TIME_MINUTES=
+
+EMAIL_USER=
+EMAIL_PASSWORD=
+EMAIL_FROM=
 
 POSTGRES_HOST=
 POSTGRES_PORT=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
 POSTGRES_DATABASE=
+
+JWT_SECRET=
+
+AWS_REGION=
+SPACES_KEY=
+SPACES_SECRET=
+S3_ENDPOINT=
+S3_BUCKET_NAME=
+
+CDN_URL=
